--- a/css/styles.css
+++ b/css/styles.css
@@ -55,9 +55,9 @@ a{
 
 }
 
-.button-shadow{
+/* .button-shadow{
     box-shadow: 0px 0px 8px 3px whitesmoke ;
-}
+} */
 
 .icon-button{
     font-size: 20px;
@@ -163,7 +163,7 @@ main{
     background-position: center !important;
     background-size: cover;
     height: auto; */
-    background-color: #b2aeae;
+    background-color: #ffffff;
 }
 
 h1{
@@ -173,8 +173,9 @@ h1{
     padding: 0px;
 }
 
-.main-title{
-    /* text-shadow: 3px 2px 10px white; */
+
+.main--table{
+    border: 3px solid  #6B3529;
 }
 
 .busqueda-section{
